fix(test): refactor and fix on tests on windows system